# Marina

./: LICENSE  README.md  meson.build
protos/: meson.build
src/: cursor.cpp  input.cpp  main.cpp  marina-input.hpp  marina-output.hpp  marina-renderer.hpp  marina-seat.hpp  marina-server.hpp  marina-view.hpp  marina-wl-view.hpp  marina-xdg-v6-view.hpp  marina-xdg-view.hpp  output.cpp  renderer.cpp  seat.cpp  server.cpp  view.cpp  wlview.cpp  xdgview.cpp  xdgview_v6.cpp
